==> ruitaomu/JOSHVM/javacall/implementation/esp32/cldc/serial.c <==
#define _GNU_SOURCE
#include "javacall_serial.h"
#include "javacall_logging.h"
#include <stdio.h>
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/queue.h"
#include "driver/uart.h"
#include "esp_log.h"
#define UART_PIN_TYPE_TX 0
#define UART_PIN_TYPE_RX 1
#define UART_PIN_TYPE_RTS 2
#define UART_PIN_TYPE_CTS 3
#define SUPPORTED_UART_NUM 3
#define PLATFORM_PORT_0 ((javacall_handle)0)
#define PLATFORM_PORT_1 ((javacall_handle)1)
#define PLATFORM_PORT_2 ((javacall_handle)2)
#define BUF_SIZE (1024)
#define RD_BUF_SIZE (BUF_SIZE)

static uart_word_length_t get_uart_options_databits(unsigned int options) {
	unsigned int opt_bps = options & (JAVACALL_SERIAL_BITS_PER_CHAR_7 | JAVACALL_SERIAL_BITS_PER_CHAR_8);
	if (opt_bps == JAVACALL_SERIAL_BITS_PER_CHAR_7) {
		return UART_DATA_7_BITS;
	} else {
		return UART_DATA_8_BITS;
	}
}

static uart_stop_bits_t get_uart_options_stopbits(unsigned int options) {
	unsigned int opt_stopbits = options & JAVACALL_SERIAL_STOP_BITS_2;
	if (opt_stopbits != 0)	{
		return UART_STOP_BITS_2;
	} else {
		return UART_STOP_BITS_1;
	}
}

static uart_hw_flowcontrol_t get_uart_options_flowctrl(unsigned int options) {
	unsigned int opt_flowcontrol = options & (JAVACALL_SERIAL_AUTO_RTS | JAVACALL_SERIAL_AUTO_CTS);
	if (opt_flowcontrol == JAVACALL_SERIAL_AUTO_RTS) {
		return UART_HW_FLOWCTRL_RTS;
	} else if (opt_flowcontrol == JAVACALL_SERIAL_AUTO_CTS) {
		return UART_HW_FLOWCTRL_CTS;
	} else if (opt_flowcontrol == 0) {
		return UART_HW_FLOWCTRL_DISABLE;
	} else {
		return  UART_HW_FLOWCTRL_CTS_RTS;
	}
}

javacall_result /*OPTIONAL*/
javacall_serial_get_baudRate(javacall_handle hPort, int *baudRate)
{
	if (ESP_OK == uart_get_baudrate(get_uart_port(hPort), (uint32_t*)baudRate))
	 return JAVACALL_OK;
	else
	 return JAVACALL_FAIL;

}
