==> ruitaomu/JOSHVM/javacall/implementation/stm32/cldc/serial.c <==
#include <stdio.h>
#include <string.h>
#include "javacall_serial.h"
#define BUFF_LENGTH 1024
#define RXBUFF 0
#define TXBUFF 1
#define RING_BUFF_INVALID_HANDLE ((typeRing_buff_handle)-1)

static uint32_t get_uart_options_databits(unsigned int options) {
	unsigned int opt_bps = options & (JAVACALL_SERIAL_BITS_PER_CHAR_7 | JAVACALL_SERIAL_BITS_PER_CHAR_8);
	if (opt_bps == JAVACALL_SERIAL_BITS_PER_CHAR_7) {
		return UART_WORDLENGTH_7B;
	} else {
		return UART_WORDLENGTH_8B;
	}
}

static uint32_t get_uart_options_stopbits(unsigned int options) {
	unsigned int opt_stopbits = options & JAVACALL_SERIAL_STOP_BITS_2;
	if (opt_stopbits != 0)	{
		return UART_STOPBITS_2;
	} else {
		return UART_STOPBITS_1;
	}
}

static uint32_t get_uart_options_flowctrl(unsigned int options) {
	unsigned int opt_flowcontrol = options & (JAVACALL_SERIAL_AUTO_RTS | JAVACALL_SERIAL_AUTO_CTS);
	if (opt_flowcontrol == JAVACALL_SERIAL_AUTO_RTS) {
		return UART_HWCONTROL_RTS;
	} else if (opt_flowcontrol == JAVACALL_SERIAL_AUTO_CTS) {
		return UART_HWCONTROL_CTS;
	} else if (opt_flowcontrol == 0) {
		return UART_HWCONTROL_NONE;
	} else {
		return  UART_HWCONTROL_RTS_CTS;
	}
}

javacall_result /*OPTIONAL*/
javacall_serial_get_baudRate(javacall_handle hPort, int *baudRate)
{
	if (!hPort) {
		return JAVACALL_FAIL;
	}

	*baudRate = ((UART_HandleTypeDef*)hPort)->Init.BaudRate;
	return JAVACALL_OK;
}
